# csIA

./: .gitignore  README.md  client_secret.json  hello.py  main.py  pyproject.toml  run.py
instance/: db.sqlite3
server/: __init__.py  auth.py  forms.py  main.py  models.py  transcribe.py  translate.py
server/static/css/: styles.css
server/templates/: base.html  login.html  records.html  report.html  transcribe.html  translate.html  view_record.html
templates/: base.html  login.html  report.html  translate.html
templates/css/: styles.css
